--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "actioncable": "^5.2.8-1",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
