--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "actioncable": "^5.2.8-1",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "date-fns": "^2.29.2",
     "vue": "^3.0.0",
     "vue-axios": "^3.4.1",
     "vue-router": "^4.0.0-0"
